# kobofix

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  RELEASING.md  build_controls.py  bump_version.py  epubcheck-fork-notes.md  kobofix.py  make_modern_alice.py  make_sample.py  pyproject.toml
.claude/: launch.json
.github/workflows/: pages.yml  release.yml
web/: .gitignore  README.md  app.js  cli.mjs  index.html  kobocss.js  kobofix.js  package-lock.json  package.json
web/test/: run.mjs  selftest.html
