[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kobofix"
version = "1.0.0"
description = "Make EPUBs work on Kobo e-readers (Adobe RMSDK): detect and fix the modern CSS that breaks them."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dmang-dev" }]
keywords = ["epub", "kobo", "rmsdk", "css", "ebook", "epubcheck", "adobe-digital-editions", "kepub"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/dmang-dev/kobofix"
Repository = "https://github.com/dmang-dev/kobofix"
Issues = "https://github.com/dmang-dev/kobofix/issues"

[project.scripts]
kobofix = "kobofix:main"

[tool.setuptools]
py-modules = ["kobofix"]
